--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,36 @@
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: #222;
+  height: 80px;
+  padding: 20px;
+  color: white;
+}
+
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
 * {
-    text-align: center;
-    margin: auto
+  text-align: center;
+}
+
+.card {
+  margin: 5px;
+  padding: 5px;
+}
+
+.search-form {
+  margin: 10px;
 }
